--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										amazing travel experiences I have gathered throughout these recent years.</p> 
 		</section>
 		<section class="sidebar">
-			<img src="images/own.jpg">
+			<img src="images/own.JPG">
 		</section>
 	<div class="clearfix"></div>
 		<a name="blog">
